# c_test

cmake_lessons/: build_with_cmake_command.txt  text.txt
cmake_lessons/ex1/: CmakeLists.txt
cmake_lessons/ex1/src/: main.cpp
cmake_lessons/ex2/: CmakeLists.txt
cmake_lessons/ex3/: CmakeLists.txt
cmake_lessons/ex4/: CmakeLists.txt
cmake_lessons/ex5/: attentioin.txt
lapack_test/build-lapack_test-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
lapack_test/build-lapack_test-Desktop_Qt_6_2_3_MSVC2019_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
lapack_test/build-lapack_test-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
lapack_test/build-lapack_test-Desktop_Qt_6_2_3_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
lapack_test/lapack_test/: CMakeLists.txt  main.cpp
new_file/: a.txt  main.cpp  open.cpp
openmp/: m1.cpp
plots/: 763481.tmp  a.cpp
regex/: params.txt  rt.cpp
speeds/T000_acsess/: vec.cpp
speeds/T001_multi_index/: mi.cpp
test_blas/build-mkl_blas-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
test_blas/build-mkl_blas-Desktop_Qt_6_2_3_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
test_blas/mkl_blas/: CMakeLists.txt  main.cpp
test_make/lib/: CMakeList.txt
test_make/project/: CMakeList.txt
(+51 files in other folders)
